log/build_2022-11-11_18-42-46/ros2_robotx/stderr.log
  File "/home/adept/ros2_ws_2/install/ros2_robotx/lib/python3.8/site-packages/ros2_robotx/wamv_sim.py", line 144
    if not self.land_antispam
                            ^
SyntaxError: invalid syntax

